# pkg/api/handler/user.go
@@ -31,10 +31,9 @@ func NewUserHandler(usecase services.UserUseCase) *UserHandler {
 // @id UserSignUp
 // @tags User Signup
 // @Param input body req.ReqUserDetails{} true "Input Fields"
-// @Router /user/signup [post]
+// @Router /signup [post]
 // @Success 200 "Successfully created account for user"
 // @Failure 400 "invalid input"
-
 func (usr *UserHandler) UserSignUp(ctx *gin.Context) {
 
 	var body req.ReqUserDetails
